# tvheadend-movie-wishlist

./: .gitignore  LICENSE  README.md  default_config.toml  pyproject.toml  tvheadend-movie-wishlist.service  tvheadend-movie-wishlist.timer
tests/: unit_tests.py
wishlist/: main.py  ntfy.py  tvheadend.py  util.py
wishlist/tools/: check_movie_title.py  generate_user_session_id.py
