[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tvheadend-movie-wishlist"
version = "0.0.1"
description = "This program automatically tells tvheadend to schedule movies that are specified in a wishlist."
readme = "README.md"
requires-python = '>=3.0'
dependencies = [
  "tomli",
]
